--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  font_awesome_flutter: ^10.1.0
   flutter_screenutil: ^5.5.3
   flutter_svg: ^1.1.0
   get: ^4.6.5
