--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,14 +25,15 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.1.0
   flutter_screenutil: ^5.5.3
   flutter_svg: ^1.1.0
   get: ^4.6.5
   syncfusion_flutter_gauges: ^20.1.59
+  cloud_firestore: ^3.1.17
+  flutter:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
