--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,11 @@ dependencies:
   flutter_svg: ^1.1.0
   get: ^4.6.5
   syncfusion_flutter_gauges: ^20.1.59
+  firebase_core: ^1.17.1
   cloud_firestore: ^3.1.17
   flutter:
     sdk: flutter
+  firebase_auth: ^3.3.19
 
 dev_dependencies:
   flutter_test:
