--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   syncfusion_flutter_gauges: ^20.1.59
   firebase_core: ^1.17.1
   cloud_firestore: ^3.1.17
+  firebase_database: ^9.0.15
   flutter:
     sdk: flutter
 
@@ -49,9 +50,9 @@ flutter:
 
   uses-material-design: true
 
-  assets:
-    - assets/icons/
-    - assets/pics/
+  # assets:
+  #   - assets/icons/
+  #   - assets/pics/
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
