--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,17 +18,9 @@ version: 0.0.1+1
 environment:
   sdk: ">=2.17.1 <3.0.0"
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
-  cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.1.0
   flutter_screenutil: ^5.5.3
-  flutter_svg: ^1.1.0
   get: ^4.6.5
   syncfusion_flutter_gauges: ^20.1.59
   firebase_core: ^1.17.1
@@ -42,17 +34,11 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
-
   uses-material-design: true
-
-  # assets:
-  #   - assets/icons/
-  #   - assets/pics/
+  assets:
+    - assets/icons/
+    - assets/pics/
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
