--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,57 +12,73 @@ name: Create Release
 
 jobs:
   build:
-    name: Create Release
+    name: Build Flutter App
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+          
+      # Setup Java environment in order to build the Android app
       - uses: actions/setup-java@v1
         with:
           java-version: '12.x'
+
+      # Setup the flutter environment
       - uses: subosito/flutter-action@v1
         with:
           channel: 'stable' # or: 'beta' or 'dev'
       
-      # checking dart and flutter packages
-      - name: run-checks
-        run: |
-          dart --version
-          flutter --version
-
-      - name: Set outputs
-        id: vars
-        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
-
+      # Gradle cache for faster builds
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      
       - name: Build project
         id: flutter_build
         run: |
           flutter pub get
           flutter build apk --split-per-abi
       
-      - name: Prepare release files
-        id: prepare_release
-        run: |
-          tar -czvf release_build_${{ steps.vars.outputs.sha_short }}.zip build/
-          
-      - name: Release
+      # Upload generated apk to the artifacts.
+      - uses: actions/upload-artifact@v3
+        id: app-release
+        with:
+          name: app-release
+          path: |
+            build/app/outputs/apk/release/app-*-release.apk
+          upload_url: ${{steps.create-new-release.outputs.upload_url}}
+  
+  release:
+    name: Create Release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Download Artifacts
+      - uses: actions/download-artifact@master
+        with:
+          name: my-artifact
+          path: artifact
+
+      - name: Set outputs
+        id: vars
+        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+
+      - name: Github Release
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            build/app/outputs/apk/release/app-*-release.apk
-            release_${{ steps.vars.outputs.sha_short }}.zip
+            ${{steps.download.outputs.download-path}}
+            # build/app/outputs/apk/release/app-*-release.apk
           tag_name: ${{ steps.vars.outputs.sha_short }}
           release_name: Release ${{ steps.vars.outputs.sha_short }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
-      # - uses: actions/upload-artifact@v2
-      #   with:
-      #     name: my-artifact
-      #     path: |
-      #       build/app/outputs/apk/release/app-release.apk
-      #       release_${{ steps.vars.outputs.sha_short }}.zip
-      #     upload_url: ${{steps.create-new-release.outputs.upload_url}}
-      #     tag_name: ${{ steps.vars.outputs.sha_short }}
-      #     release_name: Release ${{ steps.vars.outputs.sha_short }}
