--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,7 +61,7 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Download Artifacts
-      - uses: actions/download-artifact@master
+        uses: actions/download-artifact@master
         with:
           name: my-artifact
           path: artifact
