--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,6 @@
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-    # Sequence of patterns matched against refs/tags
-    # tags:
-    #   - 'v*.*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 name: Create Release
 
@@ -56,14 +50,16 @@ jobs:
   release:
     name: Create Release
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
       
       - name: Download Artifacts
         uses: actions/download-artifact@master
+        id: download
         with:
-          name: my-artifact
+          name: app-release
           path: artifact
 
       - name: Set outputs
