--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
           
       # Setup Java environment in order to build the Android app
       - uses: actions/setup-java@v1
@@ -32,8 +32,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
       
+      # Build flutter android app
       - name: Build project
-        id: flutter_build
         run: |
           flutter pub get
           flutter build apk --split-per-abi
@@ -45,7 +45,6 @@ jobs:
           name: app-release
           path: |
             build/app/outputs/apk/release/app-*-release.apk
-          upload_url: ${{steps.create-new-release.outputs.upload_url}}
   
   release:
     name: Create Release
@@ -53,7 +52,7 @@ jobs:
     needs: build
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       
       - name: Download Artifacts
         uses: actions/download-artifact@master
@@ -71,10 +70,8 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            ${{steps.download.outputs.download-path}}
-            # build/app/outputs/apk/release/app-*-release.apk
+            ${{ steps.download.outputs.download-path }}/*
           tag_name: ${{ steps.vars.outputs.sha_short }}
-          release_name: Release ${{ steps.vars.outputs.sha_short }}
+          name: Release ${{ steps.vars.outputs.sha_short }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        
